# kings-press-editorial-desk

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  drizzle.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
__tests__/: anthropic-json.test.ts  book-export.test.ts  errors.test.ts  exporters.test.ts  file-extract.test.ts  gates.test.ts  gather.test.ts  generators.test.ts  hedra.test.ts  llm.test.ts  local-desktop.test.ts  media-providers.test.ts  refContext.test.ts  revision.test.ts  weave.test.ts
app/: layout.tsx
db/: gather-schema.ts  local-sqlite-schema.sql  migration.sql  schema.ts  style-schema.ts
docs/: API_SPEC.md  BUILD_BRIEF.md  CLAUDE.md  DATA_MODEL.md  DESKTOP_LOCAL_FIRST.md  GATHER_BRIEF.md  GATHER_INTEGRATION.md  LOCAL_DEV.md  README.md  SERVER_README.md
lib/: anthropic.ts  auth.ts  db.ts  drive.ts  driveError.ts  elevenlabs.ts  errors.ts  exporters.ts  gates.ts  gather-validation.ts  generators.ts  hedra.ts  mediaAudio.ts  mediaImage.ts  mediaProviders.ts  models-fallback.ts  refContext.ts  revision.ts  schemas-campaigns.ts  schemas-drive.ts  schemas-generators.ts  schemas-pieces.ts  schemas-settings.ts  schemas-weave.ts  seed-data.ts  seed.ts  storage.ts  supabase.ts  validation.ts  weave.ts  weaveJobs.ts
public/: ai.js  app.jsx  components-common.jsx  desktop.js  drive.js  (+20 more)
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: desktop-setup.toml
src-tauri/src/: main.rs
(+97 files in other folders)
