[package]
name = "kings-press-editorial-desk"
version = "0.1.0"
description = "King's Press Editorial Desk"
authors = ["King's Press"]
edition = "2021"
build = "build.rs"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
